fix: modal title z-index

--- a/src/components/common/modal/components/info/style.module.scss
+++ b/src/components/common/modal/components/info/style.module.scss
@@ -2,7 +2,6 @@
     height: 100%;
     & .title {
         position: relative;
-        z-index: 9999;
     }
     & .textarea {
         color: #000000;
